--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{report}
+\documentclass[11pt,a4paper,twocolumn]{report}
 \usepackage[margin=2cm]{geometry}
 
 %-- Encoding, Language --%
