--- a/latex/main.tex
+++ b/latex/main.tex
@@ -206,7 +206,7 @@ Når man kigger på Ligning \ref{eq:meyer}, så er det vigtigt at notere sig, at
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.8]{images/illustrations/meyer_plot_comparison}
+\includegraphics[width=\linewidth]{images/illustrations/meyer_plot_comparison}
 \caption{Udviklingen for henholdvis $\log_2(\frac{A}{W})$ og $\sqrt{\frac{A}{W}}$}
 \label{fig:log_vs_sqrt}
 \end{figure}
@@ -237,7 +237,7 @@ På trods af at de fire formuleringer er forskellige, så vil de godt kunne appr
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.7]{images/plots/sammenligning_ID}
+\includegraphics[width=\linewidth]{images/plots/sammenligning_ID}
 \caption{ID for de fire formuleringer som funktion af A/W}
 \label{fig:Sammenligning}
 \end{figure}
@@ -421,7 +421,7 @@ Efterfølgende har vi lukket for muligheden for at deltage i vores forsøg den 3
 \centering
 \vspace{0pt}
 \captionof{figure}{Illustration af pegeopgave}
-\includegraphics[width=\textwidth, trim = 7cm 22cm 20cm 5cm, clip]{images/screenshots/ex_step_6_pointing_path}
+\includegraphics[width=\textwidth, trim = 8cm 22cm 20cm 5cm, clip]{images/screenshots/ex_step_6_pointing_path}
 \label{fig:pegeopgave}
 \caption{Illustration af tunnelopgave}
 \includegraphics[width=\textwidth, trim = 25cm 23cm 25cm 17cm, clip]{images/screenshots/ex_step_4_tunnel_path}
