--- a/latex/main.tex
+++ b/latex/main.tex
@@ -237,7 +237,7 @@ På trods af at de fire formuleringer er forskellige, så vil de godt kunne appr
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\linewidth]{images/plots/sammenligning_ID}
+\includegraphics[width=\linewidth]{images/plots/plot_comparison_id}
 \caption{ID for de fire formuleringer som funktion af A/W}
 \label{fig:Sammenligning}
 \end{figure}
@@ -522,26 +522,33 @@ I listing \ref{lst:aic} ses det at vi benytter $AIC()$ på alle fire modeller, h
 
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
-\begin{minipage}{\linewidth}
-	\centering
-	\includegraphics[width=\textwidth]{images/plots/plot_analysis_aic}
-	\captionof{figure}{AIC-analyse}
-	\label{fig:plot_analysis_aic}
-\end{minipage}\\\\
+% TODO: Indsæt tabel med de relative størrelser i stedet for plot
 Figur \ref{fig:plot_analysis_aic} viser AIC for de fire modeller. De fire modellers AIC er høje, men det er underordnet for vores analyse, da vi kigger på deres indbyrdes forhold. Det ses af figuren at Meyer's har den laveste AIC og derfor er den model der passer bedst til den indsamlede data. MacKenzie's og Fitt's følger herefter med lidt højere AIC værdier, mens Welford's er den klart dårligste af de fire modeller.
 
 \addcontentsline{toc}{subsection}{Residualanalyse}
 \subsection*{Residualanalyse}
 \begin{minipage}{\linewidth}
 	\centering
-	\includegraphics[width=\textwidth]{images/plots/plot_residual_comparison}
-	\captionof{figure}{Sammenligning af residualplots}
-	\label{fig:plot_residual_comparison}
+	\includegraphics[height=.2\textheight]{images/plots/plot_residual_fitt}
+	\captionof{figure}{Fitt's residualplot}
+	\label{fig:plot_residual_fitt}
+	
+	\includegraphics[height=.2\textheight]{images/plots/plot_residual_welford}
+	\captionof{figure}{Welford's residualplot}
+	\label{fig:plot_residual_welford}
+	
+	\includegraphics[height=.2\textheight]{images/plots/plot_residual_mackenzie}
+	\captionof{figure}{MacKenzie's residualplot}
+	\label{fig:plot_residual_mackenzie}
+	
+	\includegraphics[height=.2\textheight]{images/plots/plot_residual_meyer}
+	\captionof{figure}{Meyer's residualplot}
+	\label{fig:plot_residual_meyer}
 \end{minipage}\\\\
-For at få en ekstra vurdering af præcisionen af modellerne, har vi valgt at lave en residualanalyse ved hjælp af residualplots (figur \ref{fig:plot_residual_comparison}). Residualerne I modellerne er variationen i $ID$ som modellerne ikke når at opfange, og de kan derved sige noget om hvor præcis modellerne er i forhold til den data vi har indsamlet.\\
-På figur \ref{fig:plot_residual_comparison} ses alle fire modellers residualplot, med en rød linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen.\\
+For at få en ekstra vurdering af præcisionen af modellerne, har vi valgt at lave en residualanalyse ved hjælp af residualplots. Residualerne I modellerne er variationen i $ID$ som modellerne ikke når at opfange, og de kan derved sige noget om hvor præcis modellerne er i forhold til den data vi har indsamlet.\\
+På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fig:plot_residual_mackenzie} og \ref{fig:plot_residual_meyer} ses alle fire modellers residualplot, med en rød linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen.\\
 Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser at modellen passer dårlig på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver den bedste fit til den indsamlede data.
-Det ses af figur \ref{fig:plot_residual_comparison} at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette skal findes i at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklare, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget. Dette passer også med vores Sammenligningsafsnit, hvor vi viste at $ID$ for de to vil ligge parrallelt med hinanden.
+Det ses af figur \ref{fig:plot_residual_welford} at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette skal findes i at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklare, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget. Dette passer også med vores Sammenligningsafsnit, hvor vi viste at $ID$ for de to vil ligge parrallelt med hinanden.
 
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
